# Hexagon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  all_patterns.json  artifacts.json  changelog.rss  custom.css  dist-workspace.toml  flake.nix  hexagon-installer.ps1.txt  hexagon-installer.sh.txt  index.html  nbt.txt  oranda.json  package.nix  pattern_registry.elm  readme.md  style.css  test.hexcasting  test.toml  test.txt
.github/workflows/: web.yml
artifacts/: index.html
changelog/: index.html
changelog/0.0.2/: index.html
changelog/v0.0.1/: index.html
changelog/v0.2.0/: index.html
changelog/v0.2.1/: index.html
changelog/v0.3.0/: index.html
site/: style.css
src/: compiler.rs  grammar.pest  hex_server.rs  interpreter.rs  iota.rs  lib.rs  main.rs  parse_config.rs  parser.rs  pattern_registry.rs  patterns.rs
src/compiler/: external.rs  if_block.rs  init_heap.rs  nbt.rs  ops.rs  while_block.rs
src/interpreter/: continuation.rs  error.rs  mishap.rs  ops.rs  stack.rs  state.rs
src/iota/: five_dim_casting.rs  hex_casting.rs  hexal.rs
src/iota/five_dim_casting/: cell.rs  continuum.rs
src/iota/hex_casting/: bool.rs  continuation.rs  entity.rs  garbage.rs  list.rs  null.rs  number.rs  pattern.rs  vector.rs
src/iota/hexal/: mote.rs
src/iota/more_iotas/: matrix.rs  string.rs
src/patterns/: constructors.rs  eval.rs  five_dim_casting.rs  hex_casting.rs  hexal.rs  lists.rs  math.rs  misc.rs  more_iotas.rs  pattern.rs  read_write.rs  selectors.rs  special.rs  spell.rs  stack.rs  swizzle.rs
src/patterns/five_dim_casting/: cell.rs  continuum.rs
src/patterns/hex_casting/: constructors.rs  eval.rs  lists.rs  math.rs  read_write.rs  sentinel.rs  special.rs  stack.rs  swizzle.rs
src/patterns/hexal/: math.rs  spells.rs
src/patterns/more_iotas/: matrices.rs  matrix.rs  string.rs
wix/: main.wxs
