[package]
name = "hexagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
im = "15.1.0"
nalgebra = "0.32.2"
owo-colors = "3.5.0"
pest = "2.6"
pest_derive = "2.6"
rand = "0.8.5"
snailquote = "0.3.1"
toml = "0.7.6"
hexnumgen = {git = "https://github.com/Master-Bw3/hexnumgen-rs"}
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
# serde = { version = "1.0", features = ["derive"] }
